--- a/problem-1/index.html
+++ b/problem-1/index.html
@@ -1,1 +1,11 @@
-<p> Home <p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="Assets/CSS/site.css">
+		<title>Problem 1</title>
+	</head>
+	<body>
+
+	</body>	
+<html>
