--- a/problem-1/index.html
+++ b/problem-1/index.html
@@ -6,6 +6,11 @@
 		<title>Problem 1</title>
 	</head>
 	<body>
-
+		<div class="grid">
+			<div class="cell">1</div>
+			<div class="cell">2</div>
+			<div class="cell">3</div>
+			<div class="cell">4</div>
+		</div>
 	</body>	
 <html>
