--- a/problem-2/index.html
+++ b/problem-2/index.html
@@ -2,8 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<script src="Assets/Scripts/site.js"> </script>
 		<link rel="stylesheet" type="text/css" href="Assets/CSS/site.css">
-		<title>Problem 2</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Problem 2 || Note Taking App</title>
+		
 	</head>
 	<body>
 		
