html added for problem 2

--- a/problem-2/index.html
+++ b/problem-2/index.html
@@ -9,6 +9,24 @@
 		
 	</head>
 	<body>
-		
-	</body>	
+  <div id="wrapper"> 
+  	<div id="note-form">
+  		<h1 id="form-title"> Create A Note <h1>
+  		<label>Note Title: </label>
+      	<input type="text" id="note-title">
+      	<label>Body:</label>
+      	<textarea rows="10" cols="42" id="message" name="message"></textarea>
+      	<label>Color:</label>
+      	<select id="color" name="color">
+	        <option value="red" selected>Red</option>
+	        <option value="green">Green</option>
+	        <option value="blue">Blue</option>
+        </select>
+      <div id="button">
+      	<button id="add">Create</button>
+        <div id="error"></div>
+      </div>
+  	<div>
+  </div>
+</body>
 <html>
