--- a/problem-2/index.html
+++ b/problem-2/index.html
@@ -3,30 +3,74 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="Assets/Scripts/site.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="Assets/CSS/site.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Problem 2 || Note Taking App</title>
-		
 	</head>
-	<body>
-  <div id="wrapper"> 
-  	<div id="note-form">
-  		<h1 id="form-title"> Create A Note <h1>
-  		<label>Note Title: </label>
-      	<input type="text" id="note-title">
-      	<label>Body:</label>
-      	<textarea rows="10" cols="42" id="message" name="message"></textarea>
-      	<label>Color:</label>
-      	<select id="color" name="color">
-	        <option value="red" selected>Red</option>
-	        <option value="green">Green</option>
-	        <option value="blue">Blue</option>
-        </select>
-      <div id="button">
-      	<button id="add">Create</button>
-        <div id="error"></div>
-      </div>
-  	<div>
-  </div>
-</body>
+
+  <body>
+    <div class="app">
+      <h4 class="text-center mb-3">Note Taking App</h4>
+        <div id="addNew">
+          <!-- Button For Modal -->
+          <button name="add" type="button" data-bs-toggle="modal" data-bs-target="#form" >Add New Note</button> 
+        </div>
+      <h5 class = "text-center my-3">Notes</h5>
+        
+      <!-- Modal -->
+      <form class="modal fade" id="form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Note</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>Note Title:</p>
+              <input type="text" class="form-control" id="titleInput" >
+              <br>
+              <p>Note Body:</p>
+              <textarea name="body" class="form-control" id="bodyInput" cols="30" rows="5"></textarea>
+              <br>
+              <p>Note Color:</p>
+              <select id="colorInput" name="colorInput">
+                <option value="red" selected>Red</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+              </select>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Add</button>
+            </div>
+          </div>
+        </div>
+      </form>
+
+        <div id="notes">
+
+          <div>
+            <span class="fw-bold">Note1</span>
+            <p>Bodyyy jgfheiurghreuhg kslf iofhiroeu ghrehg</p>
+            <span class="options">
+              <button name="edit" type="button">Edit</button>
+              <button name="delete" type="button">Delete</button> 
+            </span>
+          </div>
+
+          <div>
+            <span class="fw-bold">Note2</span>
+            <p>Goattt the wok </p>
+            <span class="options">
+              <button name="edit" type="button">Edit</button>
+              <button name="delete" type="button">Delete</button> 
+            </span>
+          </div>
+          
+
+        </div>
+    </div>
+  </body>
 <html>
