--- a/problem-2/index.html
+++ b/problem-2/index.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="Assets/Scripts/site.js"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="Assets/CSS/site.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,6 +28,9 @@
             <div class="modal-body">
               <p>Note Title:</p>
               <input type="text" class="form-control" id="titleInput" >
+              <div id="msg">
+                
+              </div>
               <br>
               <p>Note Body:</p>
               <textarea name="body" class="form-control" id="bodyInput" cols="30" rows="5"></textarea>
@@ -72,5 +73,8 @@
 
         </div>
     </div>
+
+    <script src="Assets/Scripts/site.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 <html>
