--- a/problem-2/index.html
+++ b/problem-2/index.html
@@ -57,7 +57,7 @@
             <p>Bodyyy jgfheiurghreuhg kslf iofhiroeu ghrehg</p>
             <span class="options">
               <button name="edit" type="button">Edit</button>
-              <button name="delete" type="button">Delete</button> 
+              <button onClick = "deleteNote(this)" type="button">Delete</button> 
             </span>
           </div>
 
@@ -66,7 +66,7 @@
             <p>Goattt the wok </p>
             <span class="options">
               <button name="edit" type="button">Edit</button>
-              <button name="delete" type="button">Delete</button> 
+              <button onClick = "deleteNote(this)" type="button">Delete</button> 
             </span>
           </div>
           
