--- a/problem-2/index.html
+++ b/problem-2/index.html
@@ -56,7 +56,7 @@
             <span class="fw-bold">Note1</span>
             <p>Bodyyy jgfheiurghreuhg kslf iofhiroeu ghrehg</p>
             <span class="options">
-              <button name="edit" type="button">Edit</button>
+              <button onClick = "editNote(this)" data-bs-toggle="modal" data-bs-target="#form" name="edit" type="button">Edit</button>
               <button onClick = "deleteNote(this)" type="button">Delete</button> 
             </span>
           </div>
@@ -65,7 +65,7 @@
             <span class="fw-bold">Note2</span>
             <p>Goattt the wok </p>
             <span class="options">
-              <button name="edit" type="button">Edit</button>
+              <button onClick = "editNote(this)" data-bs-toggle="modal" data-bs-target="#form" name="edit" type="button">Edit</button>
               <button onClick = "deleteNote(this)" type="button">Delete</button> 
             </span>
           </div>
